2010-11-10  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Tests defs: various reorderings.
	* tests/defs.in: Reordered various snippets of code in a
	clearer way.

2010-11-06  Stefano Lattarini  <stefano.lattarini@gmail.com>

	New tests on obsoleted usages of automake/autoconf macros (such
	as AC_INIT, AM_INIT_AUTOMAKE and AC_OUTPUT).
	* tests/backcompat.test: New test script.
	* tests/backcompat2.test: Likewise.
	* tests/backcompat3.test: Likewise.
	* tests/backcompat4.test: Likewise.
	* tests/backcompat5.test: Likewise.
	* tests/backcompat6.test: Likewise.
	* tests/init.test: Extended and improved, esp. by trying more
	combinations of calls to AC_INIT and AM_INIT_AUTOMAKE with few
	arguments.
	* tests/Makefile.am (TESTS): Updated.

2010-11-06  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Fix bug in rules for creating vala vapi/header files.
	* automake.in (lang_vala_finish_target): Add forgotten "fi" in an
	if control structure in a generated make rules.  Bug introduced
	by previous commit `v1.11-221-gd7c1679', and revealed by failure
	of test `vala2.test'.

2010-11-01  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix and document rules to not touch the tree with `make -n'.
	* doc/automake.texi (Multiple Outputs): Document the problem of
	modifications during dry-run execution, propose solution.
	* NEWS: Update.
	* automake.in (lang_vala_finish_target): Split recipe so the
	stamp file is not removed with GNU `make -n'.
	(lang_yacc_target_hook): Separate removal of parser output file
	and header remaking.
	* lib/am/lisp.am ($(am__ELCFILES)): Determine whether -n was
	passed to make, take care not to remove any files in that case.
	* lib/am/remake-hdr.am (%CONFIG_H%): Separate removal of
	%STAMP% file from induced remaking of config header.
	* tests/autohdrdry.test, tests/lispdry.test, tests/yaccdry.test:
	New tests.
	* tests/Makefile.am (TESTS): Update.

2010-11-05  Stefano Lattarini  <stefano.lattarini@gmail.com>
