@@ -51,6 +51,7 @@ fi
 
 echo "=== Running test $0"
 
+# The name of the current test (without the `.test' suffix.)
 me=`echo "$0" | sed -e 's,.*[\\/],,;s/\.test$//'`
 
 
@@ -207,8 +208,12 @@ AUTOMAKE_fails ()
 ##  required by them.                                          ##
 ## ----------------------------------------------------------- ##
 
+# Print it here, so that the user will see it also if the test
+# will be skipped due to some tool missing in $PATH itslef.
 echo "$PATH"
 
+# Look for (and maybe set up) required tools and/or system features; skip
+# the current test if they are not found.
 for tool in : $required
 do
   # Check that each required tool is present.
@@ -390,7 +395,9 @@ case " $required " in
     esac
     # Libtool cannot cope with spaces in the build tree.  Our testsuite setup
     # cannot cope with spaces in the source tree name for Libtool and gettext
-    # tests.
+    # tests.  Using just "`pwd`" for the check here is ok, since the further
+    # temporary subdirectory where the test will be run is ensured not to
+    # contain any space.
     case $testsrcdir,`pwd` in
       *\ * | *\	*) Exit 77;;
     esac
