@@ -1,5 +1,9 @@
 2010-11-10  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	Tests defs: improve and extends comments.
+	* tests/defs.in: Improve and extends some comments, especially in
+	relation with the changes introduced by the previous reordering.
+
 	Tests defs: various reorderings.
 	* tests/defs.in: Reordered various snippets of code in a
 	clearer way.
